--- a/css/style5....css
+++ b/css/style5....css
@@ -1,6 +1,4 @@
-/*
-    DEMO STYLE
-*/
+/* DEMO STYLE */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
@@ -10,7 +8,7 @@ body {
 }
 
 .sidebar-header {
-  content:url(../image/phlogo.png);
+  /* content:url(../image/phlogo.png); */
    width:200px; /*width of your image*/
    height:200px; /*height of your image*/
    margin:auto; /* If you want no margin */
@@ -35,11 +33,11 @@ a:focus {
 }
 
 .navbar {
-    //padding: 15px 10px;
+    /* //padding: 15px 10px; */
     background-color: #6d7fcc;
     border-radius: 20;
     margin-bottom: 0px;
-    //box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    /* //box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1); */
     margin: 0px;
     width: 70%;
 }
@@ -50,7 +48,7 @@ a:focus {
 .navbar-btn {
     box-shadow: none;
     outline: none !important;
-    //border: solid black;
+    /* //border: solid black; */
 }
 
 .line {
@@ -70,7 +68,7 @@ a:focus {
     display: flex;
     width: 100%;
     align-items: stretch;
-    //perspective: 1500px;
+    /* //perspective: 1500px; */
 }
 
 #sidebar {
@@ -80,7 +78,7 @@ a:focus {
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
-    //margin: 10px;
+    /* //margin: 10px; */
 }
 
 #sidebar.active {
@@ -168,7 +166,7 @@ a.article:hover {
 
 #content {
     width: 100%;
-    //padding: 10px;
+    /* //padding: 10px; */
     min-height: 100vh;
     transition: all 0.3s;
     margin: 0px;
@@ -193,7 +191,7 @@ a.article:hover {
 }
 
 #sidebarCollapse span:first-of-type {
-    //transform: rotate(180deg) translate(2px, 2px);
+    /* //transform: rotate(180deg) translate(2px, 2px); */
 
 }
 
@@ -202,7 +200,7 @@ a.article:hover {
 }
 
 #sidebarCollapse span:last-of-type {
-    //transform: rotate(25deg) translate(1px, -1px);
+    /* //transform: rotate(25deg) translate(1px, -1px); */
 }
 
 #sidebarCollapse.active span {
